--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://fastleditor.github.io/fastleditoranimationcreator",
+  "homepage": "https://BlueScreen-AeroSpace.github.io/AnimationCreator",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
@@ -17,7 +17,6 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
     "esp-web-tools": "^10.1.0",
-    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-scrollbar": "^4.0.1",
@@ -43,6 +42,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^0.12.0",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "playwright": "^1.51.1",
     "storybook": "^8.6.11",
